ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itm-tickets-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
      - path: /api/inventory
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 80
      - path: /api/prices
        pathType: Prefix
        backend:
          service:
            name: price-service
            port:
              number: 80
      - path: /api/search
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 80
      - path: /hubs
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 80
